--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+:root {
+    --black-color: #000000;
+    --yellow-color: rgb(240, 240, 75);
+}
+
 /*--------------------------------------*/
 
 .contenedor {
@@ -14,12 +19,18 @@
 
 /* HEADER */
 
-.flex-ul-container {
+.ul-container {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    background-color: var(--yellow-color);
+    border-bottom: 1px solid var(--black-color);
 }
 
 li {
@@ -28,6 +39,12 @@ li {
 
 li a {
     text-decoration: none;
+    color: var(--black-color);
+}
+
+li a:hover {
+    border-bottom: 1px solid var(--black-color);
+    transition: border-bottom 1s linear 0.2s;
 }
 
 ul img {
@@ -42,18 +59,65 @@ ul img:hover {
 
 /* MAIN */
 
-h1{
+.title {
     text-align: center;
-    margin: 20px 0;
+    padding-top: 150px;
 }
 
-.flex-container{
+.flex-container {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    gap: 10px;
+    margin: 100px 0;
+}
+
+.material-symbols-outlined {
+    vertical-align: top;
+}
+
+.flex-container a {
+    text-decoration: none;
+    color: var(--black-color);
+}
+
+.flex-container a:hover {
+    border-bottom: 1px solid var(--black-color);
+    transition: border-bottom 1s linear 0.2s;
+}
+
+main>section:last-child {
+    margin-bottom: 0;
+}
+
+/* CARROUSEL */
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    filter: invert(1);
+}
+
+#carouselNotebooks .carousel-item,
+#carouselAccesorios .carousel-item,
+#carouselCelulares .carousel-item {
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 /*--------------------------------------*/
 
 /* FOOTER */
+body>.footer {
+    margin-top: 100px;
+    background-color: var(--yellow-color);
+    border-top: 1px solid var(--black-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    height: 100px;
+    padding: 15px;
+    max-width: 100vw;
+}
