--- a/style/style.css
+++ b/style/style.css
@@ -49,17 +49,65 @@ li a {
 }
 
 li a:hover {
-    border-bottom: 1px solid var(--green-color);
     color: var(--green-color);
 }
 
-ul img {
+.carrito-container img {
     width: 40px;
 }
 
-ul img:hover {
+.carrito-container img:hover {
     cursor: pointer;
 }
+
+.barra-lateral {
+    position: fixed;
+    width: 350px;
+    height: 100vh;
+    box-shadow: -2px 0 10px rgba(0, 0, 0, 0.3);
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    background-color: #FFFFFF;
+    transform: translateX(100%);
+    transition: transform 0.8s ease-in-out;
+}
+
+.barra-lateral.visible {
+    transform: translateX(0);
+}
+
+.close {
+    float: right;
+    padding: 15px 15px 0 0;
+}
+
+.close:hover {
+    cursor: pointer;
+}
+
+.no-scroll {
+    overflow: hidden;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 900;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
+}
+
+.overlay.visible {
+    opacity: 1;
+    pointer-events: all;
+}
+
 
 /*--------------------------------------*/
 
