agregue un sweet alert para ver de form moderna la notificacion de agregar al carrito

--- a/style/index.css
+++ b/style/index.css
@@ -40,6 +40,8 @@ main>section:last-child {
     margin-bottom: 0;
 }
 
+/*--------------------------------------*/
+
 /* CARROUSEL */
 
 .carousel-control-prev-icon,
