--- a/style/celulares.css
+++ b/style/celulares.css
@@ -1,3 +1,7 @@
 @import url(style.css);
 @import url(index.css);
-@import url(computacion.css);
+@import url(notebooks.css);
+
+.img-producto {
+    width: 450px;
+}
