--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@
     --yellow-color: rgb(240, 240, 75);
     --green-color: #00a650;
     --white-color: #FFFFFF;
+    --grey-color: #DDDDDD;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wdth,wght@0,87.5,500;1,87.5,500&display=swap');
@@ -57,7 +58,7 @@ li a:hover {
     width: 40px;
 }
 
-.carrito-container img:hover {
+.carrito-container:hover {
     cursor: pointer;
 }
 
@@ -69,7 +70,7 @@ li a:hover {
     position: fixed;
     top: 0;
     right: 0;
-    width: 350px;
+    width: 400px;
     height: 100vh;
     box-shadow: -2px 0 10px rgba(0, 0, 0, 0.3);
     z-index: 1000;
@@ -78,17 +79,98 @@ li a:hover {
     transition: transform 0.8s ease-in-out 0.1s;
 }
 
+.barra-lateral:hover {
+    cursor: auto;
+}
+
 .barra-lateral.visible {
     transform: translateX(0);
 }
 
 .close {
     float: right;
-    padding: 15px 15px 0 0;
+    padding: 12px 20px 0 0;
 }
 
 .close:hover {
     cursor: pointer;
+}
+
+.empty-carrito {
+    text-align: center;
+    margin-top: 200px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.full-carrito {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 40px 0 15px 0;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-areas:
+        "img titulo titulo"
+        "img agrega agrega"
+        "img precio precio";
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+}
+
+.grid-container img {
+    grid-area: img;
+    width: 100px;
+}
+
+.grid-container h5 {
+    font-size: 16px;
+    max-width: 250px;
+    grid-area: titulo;
+}
+
+.grid-container div {
+    grid-area: agrega;
+}
+
+.grid-container h6 {
+    grid-area: precio;
+}
+
+.oculto {
+    display: none;
+}
+
+.btn-vaciar{
+    position: fixed;
+    width: 90%;
+    margin: 20px;
+    bottom: 60px;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    border: none;
+    padding: 15px 50px;
+    border-radius: 50px;
+    font-family: "Inter", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+}
+.btn-finalizar {
+    position: fixed;
+    bottom: 0;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    border: none;
+    padding: 15px 50px;
+    border-radius: 50px;
+    font-family: "Inter", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    width: 90%;
+    margin: 20px;
 }
 
 .no-scroll {
@@ -144,8 +226,8 @@ li a:hover {
 }
 
 .img-producto {
-    width: 600px;
-    border: 1px solid #DDDDDD;
+    width: 550px;
+    border: 1px solid var(--grey-color);
     border-radius: 10px;
     padding: 5px;
 }
